<resources>
    <string name="app_name">Moview</string>

    <!--Menu(Login) Values-->
    <string name="home">Home</string>
    <string name="register">Register</string>

    <!--Unicode Values-->
    <string name="OK">✔</string>
    <!-- Strings related to login -->
    <string name="login">Login</string>
    <string name="prompt_email">Email/Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signUP">Not A member? Sign up.</string>
    <string name="emptyField">This field is required</string>
    <string name="userFound">User Found:</string>
    <string name="userNotFound">Oops, User %1$s not Found</string>
    <string name="forgotPassword">Reset Password?</string>
</resources>
